playpen: Now loads parser.js dynamically and parses on enter.
--HG--
extra : rebase_source : 86901bcb95b1aced5b4ae8d8070e5a9b5079c7e0

--- a/ubiquity/chrome/content/playpen.html
+++ b/ubiquity/chrome/content/playpen.html
@@ -2,6 +2,8 @@
   <head>
     <title>Ubiquity Parser 2 Playpen</title>
     <script type="text/javascript;version=1.8" charset='utf-8' src='resource://ubiquity/scripts/jquery.js'></script>
+    <script type="text/javascript;version=1.8" 
+     src="resource://ubiquity/modules/parser/new/parser.js"></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='playpen.js'></script>
     <style type="text/css">
 			body {
