tuner: adding link to nountype tuner from the hack/edit page. should be a useful tool for command authors (and us!)

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -227,8 +227,8 @@
   <p>Help us test our <a href="feed.html#experimental-commands.html">
     experimental commands</a>!</p>
 
-  <p>Experiment with parser performance in the
-    <a href="chrome://ubiquity/content/playpen.html">parser playpen</a>.
+  <p>Experiment with parser performance and introspect in the
+    <a href="chrome://ubiquity/content/playpen.html">parser playpen</a>. Use the <a href="chrome://ubiquity/content/tuner.html">nountype tuner</a> to check your nountypes' suggestions and scoring.
   </p>
 
   <p>And if you're going to be developing Ubiquity itself, check out our <a
