--- a/ubiquity/chrome/content/tuner.html
+++ b/ubiquity/chrome/content/tuner.html
@@ -83,7 +83,7 @@
   
     <h1>Ubiquity Nountype Tuner</h1>
     
-    <p>This tuner allows you to test different inputs against the active nountypes and verify their suggestions. It is particularly helpful for developers a sense for how to tweak their nountype suggestions' scores.</p>
+    <p>This tuner allows you to test different inputs against the active nountypes and verify their suggestions. It is particularly helpful for developers to get a sense for how to tweak their nountype suggestions' scores.</p>
     
     <div class='warning' id='parser2' style='display:none'>You're not using Parser 2! The nountype tuner currently only works with Parser 2. Please <a href='chrome://ubiquity/content/settings.html'>turn on Parser 2 (aka Next Generation Parser)</a>, restart Firefox, and try again.</div>
 
