Made ubiquity web content point to getSatisfaction for bug reporting, and at the commands-in-the-wild wiki page for 'get new commands', so that we are not sending people to non-functional couchDB services.

--- a/ubiquity/chrome/content/support.html
+++ b/ubiquity/chrome/content/support.html
@@ -34,7 +34,7 @@
 
   <div class="col-four">
     <h2 class="top">Report a Bug</h2>
-    <p>If you have found a reproduceable error in Ubiquity, you can use the <a href="chrome://ubiquity/content/report-bug.html">bug report form</a> to report it.  Please include any information you have about how to reproduce the bug.</p>
+    <p>We are working on an automated bug report service, but for the time being you should report any reproducible problems you find using <a href="http://getsatisfaction.com/mozilla/products/mozilla_ubiquity">Get Satisfaction</a> or <a href="http://groups.google.com/group/ubiquity-firefox">the mailing list</a>. Please include any information you have about how to reproduce the bug.</p>
     <h2>Resetting Ubiquity</h2>
     <p>If Ubiquity becomes completely unresponsive to you, then it may be necessary to reset it to its "factory defaults" in order to use it again.  To do this, click <a
     href="reset.html">here</a>&mdash;and our apologies for the inconvenience!</p>
