NounUtils: Now listed in Ubiquity Code Documentation. Added docs. Removed redundant code.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -22,6 +22,8 @@
     <li><a class="intra-wiki"
            href="#modules/cmdutils.js">CmdUtils</a></li>
     <li><a class="intra-wiki"
+           href="#modules/nounutils.js">NounUtils</a></li>
+    <li><a class="intra-wiki"
            href="#modules/eventhub.js">EventHub</a></li>
     <li><a class="intra-wiki"
            href="#modules/webjsm.js">WebJsModule</a></li>
