This is a commit of changeset c37dbc723b9f from the ubiquity 0.1.9 branch:
  https://ubiquity.mozilla.com/hg/ubiquity-firefox-0.1.9/rev/c37dbc723b9f

Here's the changelog from that commit:

Added a button to the reset page allowing users to export their current ubiquity configuration to a new tab, in JSON format. This can eventually be used to figure out what in the ubiquity configuration was causing ubiquity to crash; it can also allow users to manually recover some of their data after a reset.

--- a/ubiquity/chrome/content/reset.html
+++ b/ubiquity/chrome/content/reset.html
@@ -19,6 +19,9 @@ made to Ubiquity, including but not limited to:</p>
 </ul>
 </body>
 <input type="button"
+       value="Export my current Ubiquity configuration to a new tab."
+       onclick="exportConfiguration();">
+<input type="button"
        value="Yes, I know what I'm doing. Reset Ubiquity and restart Firefox."
        onclick="confirmReset();">
 <script type="application/javascript;version=1.7">
@@ -59,5 +62,7 @@ function confirmReset() {
   UbiquitySetup.isResetScheduled = true;
   extApplication.restart();
 }
+</script>
+<script src="export-config.js" type="application/javascript;version=1.7">
 </script>
 </html>
