settings page: "Maximum number of suggestions"

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -77,7 +77,7 @@
 
     <h2>Miscellaneous Settings</h2>
     <p>
-     Max Number of Suggestions:
+     Maximum number of suggestions:
      <input type="text" id="max-suggestions" size="2"
       style="text-align:center"/>
     </p>
