search: added bing synonym to msn search.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -836,7 +836,7 @@ CmdUtils.makeSearchCommand({
 });
 
 CmdUtils.makeSearchCommand({
-  names: ["msn"],
+  names: ["msn","bing"],
   url: "http://search.msn.com/results.aspx?q={QUERY}",
   icon: "chrome://ubiquity/skin/icons/bing.ico",
   description: "Searches <a href=\"http://search.msn.com\">MSN</a> for the given words.",
