This is my very first commit.  I changed some text!

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -47,7 +47,7 @@
               command's safety or leave a warning about the command's
               dangers.  We hope this will help people make informed
               decisions about whether to subscribe to commands or not.
-              This feature should be coming in Ubiquity 0.2.</p>
+              This feature should be coming in a future release of Ubiquity.</p>
           </div>
         </div>
         <div id="buttons">
