command subscription: updated link to the command list
--HG--
extra : rebase_source : 2e79560388652e272c95521c61d604c76d782ac2

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -90,9 +90,9 @@
 
         <p>If you ever want to unsubscribe, you can use the Ubiquity
           &quot;help&quot; command at any time to get to
-          the <a href="about:ubiquity">command management page</a>,
-          where you can see what commands you are subscribed to, and
-          cancel any that you no longer want.</p>
+          the <a href="chrome://ubiquity/content/cmdlist.html">command
+          management page</a>, where you can see what commands you are
+          subscribed to, and cancel any that you no longer want.</p>
 
         <p>You may now close this window.</p>
       </div>
