--- a/ubiquity/chrome/content/tuner.html
+++ b/ubiquity/chrome/content/tuner.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Ubiquity Nountype Tuner</title>
+    <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
     <script type="text/javascript;version=1.8" charset='utf-8' src='resource://ubiquity/scripts/jquery.js'></script>
     <script type="text/javascript;version=1.8" 
      src="resource://ubiquity/modules/parser/new/parser.js"></script>
