editor: Now updates on "change" as well, possibly fixing <http://getsatisfaction.com/mozilla/topics/pasting_into_command_editor_doesnt_trigger_ubiquity_command_update>.
--HG--
extra : rebase_source : e8a1755fdf2027e7781615c45466bf2707161573

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -207,15 +207,11 @@
   <div id="editor-div">
     <textarea id="editor"
               rows="40"
-              style="width:99%"
-              onkeyup="PrefCommands.setCode(this.value);"></textarea>
+              style="width:99%"></textarea>
   </div>
-
   <br clear="all"/>
 
-
   <div class="col-five">
-
   <h2>Share Your Commands</h2>
   <p>Post your command on the <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page so that other users can find it.</p>
   <p>Also, sign up for the the <a href="https://ubiquity.mozilla.com/herd/command-feed/">herd command</a> which will then display your command on the <a href="https://ubiquity.mozilla.com/herd/">dashboard</a>.</p>
