Made input delay configurable.

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -83,6 +83,11 @@
      <input type="text" id="max-suggestions" size="3"
       style="text-align:center"/>
     </p>
+    <p>
+     Input delay:
+     <input type="text" id="input-delay" size="5"
+      style="text-align:center"/> milliseconds
+    </p>
     <fieldset class="parser2" style="display:none">
       <legend>Parser 2</legend>
       <p>Parser 2 can do external calls to web services to figure out what your input is, and provide you with suggested actions based on that information. This currently results in a large number of api calls being made, and is therefore disabled by default.
