--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -72,8 +72,7 @@
     </label></p>
     <p><span id="lang-settings-changed-info"></span></p>
     <p>Language:
-      <select id="language-select" disabled="true"
-               onchange="changeLanguageSettings();">
+      <select id="language-select" onchange="changeLanguageSettings();">
       </select>
     </p>
 
