--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -66,20 +66,7 @@
   <p>For information about the goals of the Ubiquity project and our plans for upcoming releases, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/Roadmap">Roadmap</a>.</p>
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.</p>
 
-
-  <!-- TODO: The empty version span below should be automatically filled later.
-       However, this functionality was removed at some point between 0.1.8
-       and 0.5 when about.js was removed. cmdlist.js now contains a commented
-       out section of code to set the version number, but there is a TODO to
-       make it apply that version number in all spots on all pages that use
-       the version class. Commenting out until that is fixed. -->
-  <!--
-  <h2>Thanks for trying out Ubiquity <span
-  class="version"></span>!</h2>
-   -->
-
-  <!-- Temporary manual entry of version number until above is corrected -->
-  <h2>Thanks for trying out Ubiquity 0.5.1!</h2>
+  <h2>Thanks for trying out Ubiquity <span class="version"></span>!</h2>
 
   <p>Version 0.5.1 of Ubiquity addresses the most significant user interface and performance bugs found in the 0.5 release. With this release you should notice increases in the speed, responsiveness, and accuracy of the parser. To learn more details about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.1_Release_Notes">Ubiquity 0.5.1 Release Notes</a>.</p>
 
