Put inline script in editor.xhtml into CDATA block; editor works again.

--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -28,7 +28,7 @@
 	<script type="application/javascript;version=1.7" src="editor.js"></script>
 	<script type="application/javascript;version=1.7" src="resource://ubiquity/scripts/codemirror/js/codemirror.js"></script>
 	<script type="text/javascript">
-	<!--
+	<![CDATA[
     const PREF_ENABLE_HIGHLIGHTING = "extensions.ubiquity.editor_highlighting";
 
     // Workaround for #437.
@@ -121,7 +121,7 @@
       Application.prefs.setValue(PREF_ENABLE_HIGHLIGHTING, enabled);
       window.location.reload();
     }
-	-->
+	]]>
 	</script>
 
 </head>
