--- a/ubiquity/chrome/content/playpen.html
+++ b/ubiquity/chrome/content/playpen.html
@@ -134,14 +134,18 @@
     <div id='languages'></div>
     <div>
       <!--<input type='button' name='clearnouncache' value='clear noun cache' id='clearnouncache'></input>-->
-      <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
-      <input type='checkbox' name='displayparseinfo' id='displayparseinfo'></input><label title='this will slow things down considerably' for='displayparseinfo'>display parse info</label><input type='checkbox' name='displayparsetree' id='displayparsetree'></input><label title='this will *not* affect performance' for='displayparsetree'>display parse lineage</label><input type='checkbox' name='autoparse' id='autoparse'></input><label title='this will slow things down considerably' for='autoparse'>automatically parse on update</label>
-      <br/>
       <label for='gu-sync'
        title="uses the same parser as the current Ubiquity instance">
-       <input type='checkbox' id='gu-sync' checked='checked'/>
+      <input type='checkbox' id='gu-sync' checked='checked'/>
        sync with <code>gUbiquity</code>
       </label>
+      <input type='checkbox' name='autoparse' id='autoparse'></input><label title='this will slow things down considerably' for='autoparse'>automatically parse on update</label>
+      <input type='checkbox' name='flushcache' id='flushcache'></input><label for='flushcache'>flush cache on each query</label>
+
+      <br/>
+      
+      <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
+      <input type='checkbox' name='displayparseinfo' id='displayparseinfo'></input><label title='this will slow things down considerably' for='displayparseinfo'>display parse info</label><input type='checkbox' name='displayparsetree' id='displayparsetree'></input><label title='this will *not* affect performance' for='displayparsetree'>display parse lineage</label>
     </div>
     
 		<div id='border'>
